feat!: rename dreamstate to delegate, refactor /dg:do command
BREAKING CHANGE: Full project rename with no backwards compatibility.

Renames:
- dreamstate -> delegate, .dreamstate/ -> .delegate/
- ds: -> dg: commands, ds- -> dg- agents
- audit -> plan mode, loop -> do concept

Refactors /dg:do from 512-line doc-style spec to 139-line imperative
command. Commit responsibility is now explicitly the orchestrator's
job, not delegated to agents.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ node_modules/
 # Build output
 dist/
 
-# Dreamstate runtime files (daemon state, IPC, loops, docs)
-.dreamstate/
+# Delegate runtime files (daemon state, IPC, loops, docs)
+.delegate/
 
 # IDE
 .idea/
@@ -25,3 +25,5 @@ draft_plan.txt
 plan_draft.md
 
 templates/
+
+.delegate/
